# git-secret-guard

./: .git-secret-guard.toml  .gitignore  .pre-commit-hooks.yaml  .semgrepignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_pattern.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: INSTALL.md  PATTERNS.md
examples/: .pre-commit-config.yaml  config.toml
src/git_secret_guard/: __init__.py  __main__.py  _version.py  cli.py  config.py  rules.py  scanner.py  staged.py
tests/: test_cli.py  test_config.py  test_rules.py  test_scanner.py  test_staged.py
